# event-signal-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  demo.sh  pyproject.toml
.github/workflows/: test.yml
breathe/: __init__.py  checks.py  cli.py  config.py  report.py  run.py  runner.py
docs/: build-and-test.md  cross-repo-contract.md  current-architecture.md  logic-diagram.md  shared-product-context.md
examples/event-scout/: breathe.yaml  event_scout.py
examples/support-agent/: breathe-buggy.yaml  breathe-fixed.yaml  buggy_agent.py  fixed_agent.py
tests/: test_breathe.py
web/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/calendar/: route.ts
web/app/dashboard/: page.tsx
web/app/dashboard/calendar/: page.tsx
web/app/import/: actions.ts  page.tsx
web/app/invite/[code]/: page.tsx
web/components/sections/: DataViz.tsx  FooterCTA.tsx  Hero.tsx  HowItWorks.tsx  Pricing.tsx  Problem.tsx  Solution.tsx  Testimonials.tsx
web/components/ui/: BreathingSphere.tsx
web/db/: schema.sql
web/lib/: db.ts  gcal.ts  parse-event.ts  scrape.ts
