[project]
name = "breathe"
version = "0.1.0"
description = "Behavioral contract testing for AI agents — define what your agent must do, catch regressions, fail CI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Breathe Contributors" }]
keywords = ["ai", "agents", "evals", "testing", "llm", "ci", "prompt-engineering"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["PyYAML>=6.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
breathe = "breathe.cli:main"
agentspec = "breathe.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["breathe*"]
exclude = ["examples*", "tests*", "docs*", "reports*"]
